generated/dev/patient-ai-api/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: patient-ai-api
  namespace: dev-healthcare
  labels:
    app: patient-ai-api
    backstage.io/kubernetes-id: patient-ai-api

spec:
  selector:
    app: patient-ai-api

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000

  type: ClusterIP
